tests/ui/span/issue-42234-unknown-receiver-type.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-42234-unknown-receiver-type.rs:6:24
   |
LL |     let x: Option<_> = None;
   |                        ^^^^ cannot infer type of the type parameter `T` declared on the enum `Option`
LL |     x.unwrap().method_that_could_exist_on_some_type();
   |     ---------- type must be known at this point
   |
help: consider specifying a concrete type for the type parameter `T`
   |
LL |     let x: Option<_> = None::</* Type */>;
   |                            ++++++++++++++

error[E0282]: type annotations needed
  --> $DIR/issue-42234-unknown-receiver-type.rs:12:16
   |
LL |         .sum::<_>()
   |                ^ cannot infer type of the type parameter `S` declared on the method `sum`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
